--- a/vignettes/blueprint-july.Rmd
+++ b/vignettes/blueprint-july.Rmd
@@ -39,8 +39,8 @@ library(dplyr, warn.conflicts = FALSE)
 library(purrr)
 theme_set(theme_minimal())
 blueprint_colours <- colorRampPalette(c("#00AFFF", "#03113E"))(4)
-exemplar_data <- readRDS("./exemplar_simulations.rds")
-parameter_sweep_data <- readRDS("./parameter_sweep_data.rds")
+exemplar_data <- readRDS("./Blueprint_Report2_July24_files/exemplar_simulations.rds")
+parameter_sweep_data <- readRDS("./Blueprint_Report2_July24_files/parameter_sweep_data.rds")
 ```
 
 # Overview {.unnumbered}
