--- a/vignettes/blueprint-final-report.Rmd
+++ b/vignettes/blueprint-final-report.Rmd
@@ -43,16 +43,30 @@ blueprint_colours <- colorRampPalette(c("#00AFFF", "#03113E"))(4)
 
 # Overview {.unnumbered}
 
-In our [initial report](https://mrc-ide.github.io/helios/articles/blueprint.html) we introduced `helios`: an individual-based modelling framework for exploring the impact that installation of far UVC could have on the transmission and burden of respiratory infections. In a [follow-up report](https://mrc-ide.github.io/helios/articles/blueprint-july.html), we presented updates to that framework and a series of analyses evaluating the impact that installation of far UVC in non-household settings could have on the burden of endemic respiratory pathogens. In this report, we again present updates to the framework made since the last report, and a series of analyses evaluating the impact that installation of far UVC in non-household settings could have on the burden of endemic respiratory pathogens.
+In our [initial report](https://mrc-ide.github.io/helios/articles/blueprint.html) we introduced `helios`: an individual-based modelling framework for exploring the impact that installation of far UVC could have on the transmission and burden of respiratory infections. In a [follow-up report](https://mrc-ide.github.io/helios/articles/blueprint-july.html), we presented updates to that framework and a series of analyses evaluating the impact that installation of far UVC in non-household settings could have on the burden of endemic respiratory pathogens. In this final report, we present updates to the framework made since the last report, and a series of analyses evaluating the impact that installation of far UVC in non-household settings could have on the burden of endemic respiratory pathogens.
 
-# Major Model Changes {#changes}
+# Model Changes {#changes}
 
-Two major updates to the model have been made since the initial report. These are:
+Two updates to the model have been made since the last report. These are:
 
-1.  Explicitly representing the square footage of the locations we are modelling (rather than simply the number of people the location plays host to).
+1.  Explicitly representing the physical area of the locations we are modelling (rather than just the number of people the location hosts). (Section \@ref(square-footage))
 2.  Adding in the option to assign far UVC to the riskiest locations (rather than assigning it to locations at random, independently of riskiness). (Section \@ref(riskiness-targeting))
 
-## Use of Data from the USA {#usa-data}
+## Explicitly representing the square meterage of each location {#square-footage}
+
+Previously, the modelling framework used the number of individuals occupying the location as a proxy for the size of the location. This approach makes the implicit and unrealistic assumption that all Setting Types (i.e. schools, workplaces, leisure settings and households) have the same occupant density.
+
+In response to this, we have updated the modelling framework to include occupant densities specific to each Setting Type, with these occupant densities selected to match those used for the calculation of transmission riskiness variation described in the [previous](https://mrc-ide.github.io/helios/articles/blueprint-july.html) report, which were:
+
+-   **Households:** 20m^2^ per person (5 people per 100m^2^, per ANSI/ASHRA Standard 62.1 Table 6.1)
+
+-   **Workplace:** 10m^2^ per person (10 people per 100m^2^)
+
+-   **Schools:** 3.33m^2^ per person(30 people per 100m^2^)
+
+-   **Leisure:** 2m^2^ per person(50 people per 100m^2^)
+
+Note that an assumption remaining here is that all Locations of a particular Setting Type (e.g. Schools) have the same assumed occupancy density. The density of occupants in Locations belonging to each Setting Type is therefore the same, but the overall area for each Location differs depending on the number of individuals who occupy that particular Location.
 
 ## Targeting far UVC to locations based on riskiness {#riskiness-targeting}
 
@@ -62,11 +76,12 @@ As a reminder, here is what the distribution of riskiness across locations of th
 
 ```{r riskiness-exemplar, fig.cap="(ref:riskiness-exemplar)", fig.fullwidth = TRUE, fig.height=5}
 
+scaling_factor <- 5
 parameter_list <- get_parameters(archetype = "flu",
                                  overrides = list(
-                                   human_population = 200000,
-                                   number_initial_S = 190000,
-                                   number_initial_E = 10000,
+                                   human_population = 200000 / scaling_factor,
+                                   number_initial_S = 190000 / scaling_factor,
+                                   number_initial_E = 10000 / scaling_factor,
                                    number_initial_I = 0,
                                    number_initial_R = 0,
                                    simulation_time = 150)) |>
@@ -111,8 +126,78 @@ ggplot(riskiness, aes(riskiness)) +
   theme(strip.background = element_rect(fill = "white")) +
   labs(x = "Variation in Riskiness (1 = Average)", y = "Frequency")
 
+```
+
+The modelling framework is now able to accommodate targeting of far UVC in a manner based on the riskiness of a location. Below we show how assignment of far UVC works for the two targeting strategies - these strategies are referred to as "random" (far UVC assigned randomly to locations, irrespective of their riskiness) or "targeted riskiness" (far UVC assigned to locations based on the rank ordered riskiness of each setting):
+
+```{r riskiness-coverage-exemplar, fig.cap="(ref:riskiness-coverage-exemplar)", fig.fullwidth = TRUE, fig.height=5}
+
+## Setting this up for Random
+parameters_square_footage_random <- set_uvc(parameters_list = parameters,
+                                            setting = "joint",
+                                            coverage = 0.5,
+                                            coverage_target = "square_footage",
+                                            coverage_type = "random",
+                                            efficacy = 0.8,
+                                            timestep = 1)
+switches_square_footage_random <- generate_far_uvc_switches(parameters_list = parameters_square_footage_random, 
+                                                            variables_list = variables_list)
+location_types_random <- c(rep("school", length(switches_square_footage_random$school_specific_riskiness)),
+                           rep("leisure", length(switches_square_footage_random$leisure_specific_riskiness)),
+                           rep("workplace", length(switches_square_footage_random$workplace_specific_riskiness)))
+riskiness_square_footage_random <- c(switches_square_footage_random$school_specific_riskiness,
+                                     switches_square_footage_random$leisure_specific_riskiness,
+                                     switches_square_footage_random$workplace_specific_riskiness)
+uvc_square_footage_random <- c(switches_square_footage_random$uvc_school,
+                               switches_square_footage_random$uvc_leisure,
+                               switches_square_footage_random$uvc_workplace)
+
+## Setting this up for targeted Riskiness
+parameters_square_footage_targeted <- set_uvc(parameters_list = parameters,
+                                              setting = "joint",
+                                              coverage = 0.5,
+                                              coverage_target = "square_footage",
+                                              coverage_type = "targeted_riskiness",
+                                              efficacy = 0.8,
+                                              timestep = 1)
+switches_square_footage_targeted <- generate_far_uvc_switches(parameters_list = parameters_square_footage_targeted, 
+                                                              variables_list = variables_list)
+location_types_targeted <- c(rep("school", length(switches_square_footage_targeted$school_specific_riskiness)),
+                           rep("leisure", length(switches_square_footage_targeted$leisure_specific_riskiness)),
+                           rep("workplace", length(switches_square_footage_targeted$workplace_specific_riskiness)))
+riskiness_square_footage_targeted <- c(switches_square_footage_targeted$school_specific_riskiness,
+                                     switches_square_footage_targeted$leisure_specific_riskiness,
+                                     switches_square_footage_targeted$workplace_specific_riskiness)
+uvc_square_footage_targeted <- c(switches_square_footage_targeted$uvc_school,
+                               switches_square_footage_targeted$uvc_leisure,
+                               switches_square_footage_targeted$uvc_workplace)
+
+## Plotting
+data.frame(setting_type = c(location_types_random, location_types_targeted), 
+           riskiness = c(riskiness_square_footage_random, riskiness_square_footage_targeted),
+           uvc = c(uvc_square_footage_random, uvc_square_footage_targeted),
+           type = c(rep("Random Targeting of Far UVC", length(riskiness_square_footage_random)), 
+                    rep("Targeting Far UVC Based on Riskiness", length(riskiness_square_footage_random)))) %>%
+  arrange(desc(riskiness)) |>
+  mutate(rank = row_number()) |>
+  mutate(
+    chosen2 = ifelse(uvc == 1, "Yes", "No")
+  )|>
+  ggplot(aes(x = rank, y = riskiness, 
+             col = chosen2, fill = chosen2)) +
+  geom_bar(stat = "identity", alpha = 1, position = position_dodge()) +
+  facet_wrap(~ type) +
+  scale_colour_manual(values = c("grey", "#03113E")) + 
+  scale_fill_manual(values = c("grey", "#03113E")) +
+  labs(x = "Rank Order of Riskiness", y = "Relative riskiness", 
+       col = "Far UVC Installed?",
+       fill = "Far UVC Installed?") +
+  theme(legend.position = "bottom")
+
 
 ```
+
+This is for an example where far UVC is installed to cover 50% of total School, Workplace and Leisure location area.
 
 # Assessing the impact of far UVC on the burden of endemic respiratory viruses {#assessing}
 
